fix overflow padding

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -60,6 +60,7 @@ $color-bluesky: rgb(0 77 170);
 $color-gpg: rgb(0 147 221);
 $color-success: light-dark(rgb(60 150 60), rgb(64 173 64));
 $color-error: light-dark(rgb(150 14 14), rgb(165 24 24));
+$face-content-padding-large: calc(4vmin + 4px);
 
 /* Fonts */
 $font-macula: 'Macula';
@@ -1124,9 +1125,10 @@ ul.social {
 
         > .face-content {
             display: flex;
-            width: inherit;
-            height: inherit;
-            padding: 10%;
+            justify-content: space-between;
+            flex-direction: column;
+            height: 100%;
+            padding: $face-content-padding-large;
             box-sizing: border-box;
             pointer-events: none;
             background-color: $color-content;
@@ -1149,6 +1151,7 @@ ul.social {
 
             > .content-section {
                 display: flex;
+                flex-grow: 1;
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-between;
@@ -1303,10 +1306,6 @@ button.threed-top {
                 width: calc(100% / $i);
             }
         }
-    }
-
-    .content-cube > .face > .face-content {
-        padding: 16px;
     }
 }
 
